# cpp_matrix_lib

./: Makefile  README.md  addedmatrix.txt  app  compile.bat  compile.sh  input.txt  inverse_LU.txt  meson.build  zeidel.txt
matrix's/: 1. Gauss-Jordan.txt  3. Tridiag-Progonka.txt  inverse_sqrt.txt  qr_decomp.txt  sqrt.txt  tridiag.txt
matrixs/: 2. LU.txt  4. Spqr.txt  5. Iter.txt  7. Inverse(LU)(example).txt  8. Inverse(spqr)(example).txt  9. QR(example).txt  9. QR.txt
src/: main.cpp  matrix.hpp
